--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,17 @@
   preview={brownian-motion.gif}
 }
 
+@article{jiang2024water,
+  title={Water ice and possible habitability in the landing area of Tianwen-1 mission},
+  author={Jiang, Changzhi and Ding, Chunyu and Su, Yan and Xing, Shuguo and Li, Jiawei and Dai, Shun},
+  journal={Space Science Reviews},
+  volume={220},
+  number={4},
+  pages={35},
+  year={2024},
+  publisher={Springer}
+}
+
 @article{einstein1950meaning,
   abbr={AJP},
   bibtex_show={true},
