--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,16 +3,10 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
 @article{jiang2024water,
+  abbr={SSR},
+  bibtex_show={true},
+  selected={true},
   title={Water ice and possible habitability in the landing area of Tianwen-1 mission},
   author={Jiang, Changzhi and Ding, Chunyu and Su, Yan and Xing, Shuguo and Li, Jiawei and Dai, Shun},
   journal={Space Science Reviews},
@@ -20,76 +14,123 @@
   number={4},
   pages={35},
   year={2024},
-  publisher={Springer}
+  publisher={Springer},
+  pdf={},
+  preview={}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{xu2024lunar,
+  abbr={RS},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  title={Lunar exploration based on ground-based radar: Current research progress and future prospects},
+  author={Xu, Jiangwan and Ding, Chunyu and Su, Yan and Ding, Zonghua and Yang, Song and Li, Jiawei and Dong, Zehua and Sharma, Ravi and Qiu, Xiaohang and Lei, Zhonghan and others},
+  journal={Remote Sensing},
+  volume={16},
+  number={18},
+  pages={3484},
+  year={2024},
+  publisher={MDPI},
+  html={https://www.mdpi.com/2072-4292/16/18/3484}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
+@article{qiu2025quantitative,
+  abbr={IEEE TGRS},
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+  title={Quantitative analysis of subsurface dielectric properties by Chang’E-4 lunar penetrating radar over lunar days 24--31},
+  author={Qiu, Xiaohang and Ding, Chunyu and Jin, Tian and Su, Yan and Sharma, Ravi and Zhi, Yuxiao and Xu, Jiangwan and Lei, Zhonghan and Chen, Haoyu and Liang, Zihang and others},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  year={2025},
+  publisher={IEEE}
 }
+
+@article{zhang2025subsoil,
+  abbr={CEE},
+  bibtex_show={true},
+  selected={true},
+  title={Subsoil structure at the Chang’E-6 landing site revealed by in-situ lunar regolith penetrating radar},
+  author={Zhang, Zongyu and Ding, Chunyu and Su, Yan and Shen, Shaoxiang and Lu, Wei and Soldovieri, Francesco and Xiao, Zhiyong and Zeng, Xingguo and Du, Wei and Liu, Yuhang and others},
+  journal={Communications Earth \& Environment},
+  volume={6},
+  number={1},
+  pages={640},
+  year={2025},
+  publisher={Nature Publishing Group UK London},
+  preview={}
+}
+
+@article{sharma2024astrobiological,
+  abbr={Book/Chap},
+  bibtex_show={true},
+  title={Astrobiological Exploration: Cosmic Evolution, Martian Habitats, and Prospects},
+  author={Sharma, Ravi and Ding, Chunyu and Srivastava, Neeraj and Lei, Zhonghan and Jiang, Changzhi and Jaaffrey, SNA},
+  journal={Martian Habitats, and Prospects (May 29, 2024)},
+  year={2024}
+}
+
+@article{ding2025towards,
+  abbr={npj Space},
+  bibtex_show={true},
+  selected={true},
+  title={Towards a habitable Moon: probing subsurface cavities with global penetrating radar},
+  author={Ding, Chunyu and Xu, Jiangwan and Zhi, Yuxiao and Sharma, Ravi and Liang, Zihang and Chen, Wentao and Qiu, Xiaohang and Jiang, Changzhi},
+  journal={npj Space Exploration},
+  volume={1},
+  number={1},
+  pages={11},
+  year={2025},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{sharma2025potential,
+  abbr={AJ},
+  bibtex_show={true},
+  title={Potential Subsurface Lava Tube Skylight on the Western Flank of Elysium Mons, Mars},
+  author={Sharma, Ravi and Ding, Chunyu and Su, Yan and Lei, Zhonghan and Jiang, Changzhi and Xu, Jiangwan and Zhi, YuXiao and Liang, Zihang and Li, Jiawei and Qiu, Xiaohang and others},
+  journal={The Astronomical Journal},
+  volume={169},
+  number={5},
+  pages={245},
+  year={2025},
+  publisher={The American Astronomical Society}
+}
+
+@article{du2025research,
+  abbr={EPP},
+  bibtex_show={true},
+  title={Research progress on internal characteristics of asteroids and comets: implications of Tianwen-2 radar observations},
+  author={Du, ShiBang and Ding, ChunYu and Su, Yan and Li, JiaWei and Dai, Shun and Sharma, Ravi and Zhi, YuXiao and Xu, JiangWan and Qiu, XiaoHang and Lei, ZhongHan and others},
+  journal={Earth and Planetary Physics},
+  volume={9},
+  number={4},
+  pages={761--781},
+  year={2025},
+  publisher={Science China Press}
+}
+
+@article{sharma2025water,
+  abbr={ApJL},
+  bibtex_show={true},
+  selected={true},
+  title={Water-driven Accessible Potential Karstic Caves in Hebrus Valles, Mars: Implications for Subsurface Habitability},
+  author={Sharma, Ravi and Ding, Chunyu and Soldovieri, Francesco and Xu, Jiangwan and Liang, Zihang and Xie, Yachen and Su, Yan and Jiang, Changzhi and Zhi, YuXiao and Chuanhu, Tang and others},
+  journal={The Astrophysical Journal Letters},
+  volume={993},
+  number={1},
+  pages={L36},
+  year={2025},
+  publisher={The American Astronomical Society}
+}
+
+@inproceedings{jiang2025subsurface,
+  abbr={EGU},
+  bibtex_show={true},
+  selected={true},
+  title={Subsurface Water Activity in Mars' Shallow Alluvial Deposit: Evidence from Tianwen-1 Radar Observations},
+  author={Jiang, Changzhi and Ding, Chunyu},
+  booktitle={EGU General Assembly Conference Abstracts},
+  pages={EGU25--16091},
+  year={2025},
+  pdf={},
+  preview={}
+}
+
