--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,6 @@
 @article{jiang2024water,
   abbr={SSR},
   bibtex_show={true},
-  selected={true},
   title={Water ice and possible habitability in the landing area of Tianwen-1 mission},
   author={Jiang, Changzhi and Ding, Chunyu and Su, Yan and Xing, Shuguo and Li, Jiawei and Dai, Shun},
   journal={Space Science Reviews},
@@ -15,8 +14,7 @@
   pages={35},
   year={2024},
   publisher={Springer},
-  pdf={},
-  preview={}
+  html={https://link.springer.com/article/10.1007/s11214-024-01068-z}
 }
 
 @article{xu2024lunar,
@@ -40,13 +38,13 @@
   author={Qiu, Xiaohang and Ding, Chunyu and Jin, Tian and Su, Yan and Sharma, Ravi and Zhi, Yuxiao and Xu, Jiangwan and Lei, Zhonghan and Chen, Haoyu and Liang, Zihang and others},
   journal={IEEE Transactions on Geoscience and Remote Sensing},
   year={2025},
-  publisher={IEEE}
+  publisher={IEEE},
+  html={https://ieeexplore.ieee.org/abstract/document/10909448}
 }
 
 @article{zhang2025subsoil,
   abbr={CEE},
   bibtex_show={true},
-  selected={true},
   title={Subsoil structure at the Chang’E-6 landing site revealed by in-situ lunar regolith penetrating radar},
   author={Zhang, Zongyu and Ding, Chunyu and Su, Yan and Shen, Shaoxiang and Lu, Wei and Soldovieri, Francesco and Xiao, Zhiyong and Zeng, Xingguo and Du, Wei and Liu, Yuhang and others},
   journal={Communications Earth \& Environment},
@@ -55,22 +53,22 @@
   pages={640},
   year={2025},
   publisher={Nature Publishing Group UK London},
-  preview={}
+  html={https://www.nature.com/articles/s43247-025-02631-4}
 }
 
 @article{sharma2024astrobiological,
-  abbr={Book/Chap},
+  abbr={SSRN},
   bibtex_show={true},
   title={Astrobiological Exploration: Cosmic Evolution, Martian Habitats, and Prospects},
   author={Sharma, Ravi and Ding, Chunyu and Srivastava, Neeraj and Lei, Zhonghan and Jiang, Changzhi and Jaaffrey, SNA},
   journal={Martian Habitats, and Prospects (May 29, 2024)},
+  html={https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4864118},
   year={2024}
 }
 
 @article{ding2025towards,
   abbr={npj Space},
   bibtex_show={true},
-  selected={true},
   title={Towards a habitable Moon: probing subsurface cavities with global penetrating radar},
   author={Ding, Chunyu and Xu, Jiangwan and Zhi, Yuxiao and Sharma, Ravi and Liang, Zihang and Chen, Wentao and Qiu, Xiaohang and Jiang, Changzhi},
   journal={npj Space Exploration},
@@ -78,6 +76,7 @@
   number={1},
   pages={11},
   year={2025},
+  html={https://www.nature.com/articles/s44453-025-00013-w},
   publisher={Nature Publishing Group UK London}
 }
 
@@ -91,6 +90,7 @@
   number={5},
   pages={245},
   year={2025},
+  html={https://iopscience.iop.org/article/10.3847/1538-3881/adbe32/meta},
   publisher={The American Astronomical Society}
 }
 
@@ -104,6 +104,7 @@
   number={4},
   pages={761--781},
   year={2025},
+  html={https://www.eppcgs.org/article/doi/10.26464/epp2025023},
   publisher={Science China Press}
 }
 
@@ -118,19 +119,18 @@
   number={1},
   pages={L36},
   year={2025},
+  html={https://iopscience.iop.org/article/10.3847/2041-8213/ae0f1c/meta}
   publisher={The American Astronomical Society}
 }
 
 @inproceedings{jiang2025subsurface,
-  abbr={EGU},
+  abbr={EGU2025},
   bibtex_show={true},
-  selected={true},
   title={Subsurface Water Activity in Mars' Shallow Alluvial Deposit: Evidence from Tianwen-1 Radar Observations},
   author={Jiang, Changzhi and Ding, Chunyu},
   booktitle={EGU General Assembly Conference Abstracts},
   pages={EGU25--16091},
   year={2025},
-  pdf={},
-  preview={}
+  html={https://ui.adsabs.harvard.edu/abs/2025EGUGA..2716091J/abstract}
 }
 
