--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -119,7 +119,7 @@
   number={1},
   pages={L36},
   year={2025},
-  html={https://iopscience.iop.org/article/10.3847/2041-8213/ae0f1c/meta}
+  html={https://iopscience.iop.org/article/10.3847/2041-8213/ae0f1c/meta},
   publisher={The American Astronomical Society}
 }
 
