--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -134,3 +134,27 @@
   html={https://ui.adsabs.harvard.edu/abs/2025EGUGA..2716091J/abstract}
 }
 
+@article{zhi2026dynamic,
+  abbr={雷达学报},
+  bibtex_show={true},
+  title={基于动态搜索中心的嫦娥四号月球表面穿透雷达层位追踪算法},
+  author={Zhi, Yuxiao and Qiu, Xiaohang and Xu, Jiangwan and Liang, Zihang and Chen, Wentao and Jiang, Changzhi and Ding, Chunyu and others},
+  journal={雷达学报},
+  volume={14},
+  pages={1--17},
+  year={2026},
+  html={https://radars.ac.cn/article/doi/10.12000/JR25216}
+}
+
+@article{ding2025lunar,
+  abbr={矿物学报},
+  bibtex_show={true},
+  title={测月雷达：月球浅表层结构演化与古环境重建的钥匙},
+  author={Ding, Chunyu and Xu, Jiangwan and Zhi, Yuxiao and Sharma, Ravi and Liang, Zihang and Qiu, Xiaohang and Lei, Zhonghan and Chen, Haoyu and Jiang, Changzhi and Chen, Wentao},
+  journal={矿物学报},
+  volume={45},
+  number={6},
+  pages={1139--1160},
+  year={2025},
+  html={https://doi.org/10.3724/j.1000-4734.2025.45.116}
+}
