--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,3 @@
----
----
-
 @string{aps = {American Physical Society,}}
 
 @article{jiang2024water,
@@ -34,7 +31,7 @@
 @article{qiu2025quantitative,
   abbr={IEEE TGRS},
   bibtex_show={true},
-  title={Quantitative analysis of subsurface dielectric properties by Chang’E-4 lunar penetrating radar over lunar days 24--31},
+  title={Quantitative analysis of subsurface dielectric properties by Chang'E-4 lunar penetrating radar over lunar days 24--31},
   author={Qiu, Xiaohang and Ding, Chunyu and Jin, Tian and Su, Yan and Sharma, Ravi and Zhi, Yuxiao and Xu, Jiangwan and Lei, Zhonghan and Chen, Haoyu and Liang, Zihang and others},
   journal={IEEE Transactions on Geoscience and Remote Sensing},
   year={2025},
@@ -45,7 +42,7 @@
 @article{zhang2025subsoil,
   abbr={CEE},
   bibtex_show={true},
-  title={Subsoil structure at the Chang’E-6 landing site revealed by in-situ lunar regolith penetrating radar},
+  title={Subsoil structure at the Chang'E-6 landing site revealed by in-situ lunar regolith penetrating radar},
   author={Zhang, Zongyu and Ding, Chunyu and Su, Yan and Shen, Shaoxiang and Lu, Wei and Soldovieri, Francesco and Xiao, Zhiyong and Zeng, Xingguo and Du, Wei and Liu, Yuhang and others},
   journal={Communications Earth \& Environment},
   volume={6},
