--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -132,11 +132,11 @@
 }
 
 @article{zhi2026dynamic,
-  abbr={雷达学报},
+  abbr={J. Radars},
   bibtex_show={true},
-  title={基于动态搜索中心的嫦娥四号月球表面穿透雷达层位追踪算法},
+  title={Horizon tracking algorithm for Chang'E-4 lunar penetrating radar based on dynamic search center (in Chinese)},
   author={Zhi, Yuxiao and Qiu, Xiaohang and Xu, Jiangwan and Liang, Zihang and Chen, Wentao and Jiang, Changzhi and Ding, Chunyu and others},
-  journal={雷达学报},
+  journal={Journal of Radars},
   volume={14},
   pages={1--17},
   year={2026},
@@ -144,11 +144,11 @@
 }
 
 @article{ding2025lunar,
-  abbr={矿物学报},
+  abbr={Acta Mineral.},
   bibtex_show={true},
-  title={测月雷达：月球浅表层结构演化与古环境重建的钥匙},
+  title={Lunar Penetrating Radar: A Key to the Evolution of Shallow Subsurface Structure and Paleoenvironmental Reconstruction of the Moon (in Chinese)},
   author={Ding, Chunyu and Xu, Jiangwan and Zhi, Yuxiao and Sharma, Ravi and Liang, Zihang and Qiu, Xiaohang and Lei, Zhonghan and Chen, Haoyu and Jiang, Changzhi and Chen, Wentao},
-  journal={矿物学报},
+  journal={Acta Mineralogica Sinica},
   volume={45},
   number={6},
   pages={1139--1160},
