--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,7 +34,7 @@
 @article{qiu2025quantitative,
   abbr={IEEE TGRS},
   bibtex_show={true},
-  title={Quantitative analysis of subsurface dielectric properties by Chang'E-4 lunar penetrating radar over lunar days 24--31},
+  title={Quantitative analysis of subsurface dielectric properties by Chang’E-4 lunar penetrating radar over lunar days 24--31},
   author={Qiu, Xiaohang and Ding, Chunyu and Jin, Tian and Su, Yan and Sharma, Ravi and Zhi, Yuxiao and Xu, Jiangwan and Lei, Zhonghan and Chen, Haoyu and Liang, Zihang and others},
   journal={IEEE Transactions on Geoscience and Remote Sensing},
   year={2025},
@@ -45,7 +45,7 @@
 @article{zhang2025subsoil,
   abbr={CEE},
   bibtex_show={true},
-  title={Subsoil structure at the Chang'E-6 landing site revealed by in-situ lunar regolith penetrating radar},
+  title={Subsoil structure at the Chang’E-6 landing site revealed by in-situ lunar regolith penetrating radar},
   author={Zhang, Zongyu and Ding, Chunyu and Su, Yan and Shen, Shaoxiang and Lu, Wei and Soldovieri, Francesco and Xiao, Zhiyong and Zeng, Xingguo and Du, Wei and Liu, Yuhang and others},
   journal={Communications Earth \& Environment},
   volume={6},
@@ -132,29 +132,4 @@
   pages={EGU25--16091},
   year={2025},
   html={https://ui.adsabs.harvard.edu/abs/2025EGUGA..2716091J/abstract}
-}
-
-@article{zhi2026dynamic,
-  abbr={J. Radars},
-  bibtex_show={true},
-  title={Horizon tracking algorithm for Chang'E-4 lunar penetrating radar based on dynamic search center (in Chinese)},
-  author={Zhi, Yuxiao and Qiu, Xiaohang and Xu, Jiangwan and Liang, Zihang and Chen, Wentao and Jiang, Changzhi and Ding, Chunyu and others},
-  journal={Journal of Radars},
-  volume={14},
-  pages={1--17},
-  year={2026},
-  html={https://radars.ac.cn/article/doi/10.12000/JR25216}
-}
-
-@article{ding2025lunar,
-  abbr={Acta Mineral.},
-  bibtex_show={true},
-  title={Lunar Penetrating Radar: A Key to the Evolution of Shallow Subsurface Structure and Paleoenvironmental Reconstruction of the Moon (in Chinese)},
-  author={Ding, Chunyu and Xu, Jiangwan and Zhi, Yuxiao and Sharma, Ravi and Liang, Zihang and Qiu, Xiaohang and Lei, Zhonghan and Chen, Haoyu and Jiang, Changzhi and Chen, Wentao},
-  journal={Acta Mineralogica Sinica},
-  volume={45},
-  number={6},
-  pages={1139--1160},
-  year={2025},
-  html={https://doi.org/10.3724/j.1000-4734.2025.45.116}
 }
